exports[`\"sourceMap\" options > should generate nested source maps when value is \"true\" 1`] = `
".other {\\n  font-family: serif;\\n}\\nbody {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n.some-class {\\n  margin: 10px;\\n}\\n"
`;

exports[`\"sourceMap\" options > should generate nested source maps when value is \"true\" 2`] = `
{
  "version": 3,
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map/index.styl"
  ],
  "names": [],
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "sourceRoot": "",
  "sourcesContent": [
    ".other\\n\\tfont-family serif",
    "border-radius()\\n  -webkit-border-radius arguments\\n  -moz-border-radius arguments\\n  border-radius arguments\\n\\nbody\\n  font 12px Helvetica, Arial, sans-serif\\n\\na.button\\n  border-radius 5px",
    "@import 'in-paths'\\n@import '../basic'\\n\\n.some-class\\n  margin: 10px\\n"
  ]
}
`;

exports[`\"sourceMap\" options > should generate nested source maps when value is \"true\" 3`] = `
[]
`;

exports[`\"sourceMap\" options > should generate nested source maps when value is \"true\" 4`] = `
[]
`;

exports[`\"sourceMap\" options > should generate source maps when the \"devtool\" value is \"source-map\" 1`] = `
".other {\\n  font-family: serif;\\n}\\nbody {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n.some-class {\\n  margin: 10px;\\n}\\n"
`;

exports[`\"sourceMap\" options > should generate source maps when the \"devtool\" value is \"source-map\" 2`] = `
{
  "version": 3,
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map.styl"
  ],
  "names": [],
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "sourceRoot": "",
  "sourcesContent": [
    ".other\\n\\tfont-family serif",
    "border-radius()\\n  -webkit-border-radius arguments\\n  -moz-border-radius arguments\\n  border-radius arguments\\n\\nbody\\n  font 12px Helvetica, Arial, sans-serif\\n\\na.button\\n  border-radius 5px",
    "@import 'in-paths'\\n@import 'basic'\\n\\n.some-class\\n  margin: 10px\\n"
  ]
}
`;

exports[`\"sourceMap\" options > should generate source maps when the \"devtool\" value is \"source-map\" 3`] = `
[]
`;

exports[`\"sourceMap\" options > should generate source maps when the \"devtool\" value is \"source-map\" 4`] = `
[]
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" 1`] = `
".other {\\n  font-family: serif;\\n}\\nbody {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n.some-class {\\n  margin: 10px;\\n}\\n"
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" 2`] = `
{
  "version": 3,
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map.styl"
  ],
  "names": [],
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "sourceRoot": "",
  "sourcesContent": [
    ".other\\n\\tfont-family serif",
    "border-radius()\\n  -webkit-border-radius arguments\\n  -moz-border-radius arguments\\n  border-radius arguments\\n\\nbody\\n  font 12px Helvetica, Arial, sans-serif\\n\\na.button\\n  border-radius 5px",
    "@import 'in-paths'\\n@import 'basic'\\n\\n.some-class\\n  margin: 10px\\n"
  ]
}
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" 3`] = `
[]
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" 4`] = `
[]
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" and the \"devtool\" value is \"false\" 1`] = `
".other {\\n  font-family: serif;\\n}\\nbody {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n.some-class {\\n  margin: 10px;\\n}\\n"
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" and the \"devtool\" value is \"false\" 2`] = `
{
  "version": 3,
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map.styl"
  ],
  "names": [],
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "sourceRoot": "",
  "sourcesContent": [
    ".other\\n\\tfont-family serif",
    "border-radius()\\n  -webkit-border-radius arguments\\n  -moz-border-radius arguments\\n  border-radius arguments\\n\\nbody\\n  font 12px Helvetica, Arial, sans-serif\\n\\na.button\\n  border-radius 5px",
    "@import 'in-paths'\\n@import 'basic'\\n\\n.some-class\\n  margin: 10px\\n"
  ]
}
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" and the \"devtool\" value is \"false\" 3`] = `
[]
`;

exports[`\"sourceMap\" options > should generate source maps when value is \"true\" and the \"devtool\" value is \"false\" 4`] = `
[]
`;

exports[`\"sourceMap\" options > should not generate source maps when the \"devtool\" value is \"false\" 1`] = `
".other {\\n  font-family: serif;\\n}\\nbody {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n.some-class {\\n  margin: 10px;\\n}\\n"
`;

exports[`\"sourceMap\" options > should not generate source maps when the \"devtool\" value is \"false\" 2`] = `
[]
`;

exports[`\"sourceMap\" options > should not generate source maps when the \"devtool\" value is \"false\" 3`] = `
[]
`;

exports[`\"sourceMap\" options > should not generate source maps when value is \"false\" 1`] = `
".other {\\n  font-family: serif;\\n}\\nbody {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n.some-class {\\n  margin: 10px;\\n}\\n"
`;

exports[`\"sourceMap\" options > should not generate source maps when value is \"false\" 2`] = `
[]
`;

exports[`\"sourceMap\" options > should not generate source maps when value is \"false\" 3`] = `
[]
`;

exports[`\"sourceMap\" options > should not generate source maps when value is \"false\" and the \"devtool\" value is \"source-map\" 1`] = `
".other {\\n  font-family: serif;\\n}\\nbody {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n.some-class {\\n  margin: 10px;\\n}\\n"
`;

exports[`\"sourceMap\" options > should not generate source maps when value is \"false\" and the \"devtool\" value is \"source-map\" 2`] = `
[]
`;

exports[`\"sourceMap\" options > should not generate source maps when value is \"false\" and the \"devtool\" value is \"source-map\" 3`] = `
[]
`;

exports[`\"sourceMap\" options > should work and allow to override source maps options 1`] = `
"body {\\n  font: 12px Helvetica, Arial, sans-serif;\\n}\\na.button {\\n  -webkit-border-radius: 5px;\\n  -moz-border-radius: 5px;\\n  border-radius: 5px;\\n}\\n/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImJhc2ljLnN0eWwiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBS0E7RUFDRSxNQUFtQixrQ0FBbkI7O0FBRUY7RUFQRSx1QkFBc0IsSUFBdEI7RUFDQSxvQkFBbUIsSUFBbkI7RUFDQSxlQUFjLElBQWQiLCJmaWxlIjoiYmFzaWMuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiYm9yZGVyLXJhZGl1cygpXG4gIC13ZWJraXQtYm9yZGVyLXJhZGl1cyBhcmd1bWVudHNcbiAgLW1vei1ib3JkZXItcmFkaXVzIGFyZ3VtZW50c1xuICBib3JkZXItcmFkaXVzIGFyZ3VtZW50c1xuXG5ib2R5XG4gIGZvbnQgMTJweCBIZWx2ZXRpY2EsIEFyaWFsLCBzYW5zLXNlcmlmXG5cbmEuYnV0dG9uXG4gIGJvcmRlci1yYWRpdXMgNXB4Il19 */"
`;

exports[`\"sourceMap\" options > should work and allow to override source maps options 2`] = `
[]
`;

exports[`\"sourceMap\" options > should work and allow to override source maps options 3`] = `
[]
`;
